--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
       </form>
 </div>
 
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
+
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyDekrRii33UrUaO8lGW9LXbaZBuTZoBuqk",
+        authDomain: "learningfirebase-74a61.firebaseapp.com",
+        databaseURL: "https://learningfirebase-74a61.firebaseio.com",
+        projectId: "learningfirebase-74a61",
+        storageBucket: "learningfirebase-74a61.appspot.com",
+        messagingSenderId: "438552903972",
+        appId: "1:438552903972:web:ce9c91dcf13ed976e6b3b1",
+        measurementId: "G-KQZSJ85BDL"
+      };
+
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
+    </script>
+
     <script src="scripts/chat.js"></script>
     <script src="scripts/ui.js"></script>
     <script src="scripts/app.js"></script>
